# python-dqlite-dbapi

./: DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/dqlitedbapi/: __init__.py  _constants.py  connection.py  cursor.py  exceptions.py  types.py
src/dqlitedbapi/aio/: __init__.py  connection.py  cursor.py
tests/: conftest.py  test_aconnect_cleanup_on_connect_failure.py  test_aexit_rollback_debug_log.py  test_aio_commit_rollback_no_tx.py  test_aio_commit_rollback_no_tx_code_matrix.py  test_aio_commit_rollback_wrapping.py  test_aio_cursor_drain_rows.py  test_aio_executemany_cursor_close_cascade.py  test_aio_module_attributes.py  test_aio_register_adapter_export.py  test_aio_register_converter_stubs.py  test_arraysize_validation.py  test_async_backup_not_async_def.py  test_async_close_ensure_locks_guard.py  test_async_close_finally_propagates_cancel.py  test_async_close_op_lock_bounded.py  test_async_close_race.py  test_async_commit_rollback_in_transaction_under_lock.py  test_async_commit_rollback_messages_under_lock.py  test_async_commit_rollback_retry_after_invalidate.py  test_async_connection.py  test_async_connection_close_during_connect.py  test_async_connection_cursor_fork_guard.py  test_async_connection_race.py  test_async_connection_transaction.py  test_async_cursor.py  test_async_cursor_aiter_aenter_pep249_pins.py  test_async_cursor_callproc_nextset_scroll_loop_binding.py  test_async_cursor_close_lock_free.py  test_async_cursor_closed_state_pep249.py  test_async_cursor_execute_messages_clear.py  test_async_cursor_fetch_loop_binding.py  test_async_cursor_loop_binding.py  test_async_cursor_setinputsizes_loop_binding.py  test_async_executemany_atomic.py  test_async_executemany_close_race.py  test_async_executescript_stub_raises_on_call.py  test_async_fetch_does_not_lazy_bind_loop.py  test_async_force_close_transport.py  test_async_in_transaction_loop_binding.py  (+164 more)
tests/aio/: test_async_connection_fork_guard.py  test_async_iter_protocol_invariants.py  test_close_cancel_between_cursor_cascade_and_lock.py  test_fetchmany_cancel_atomic.py  test_messages_clear_on_closed.py
tests/integration/: conftest.py  test_async_concurrent_executemany_serialized.py  test_async_cursor_concurrent_execute_rejected.py  test_async_cursor_edge_branches.py  test_async_fetchmany_cancel.py  test_async_returning_zero_rows.py  test_async_transaction_ctxmgr_rejects_stray_commit.py  test_concurrent_cursors_visibility.py  test_constraint_extended_codes.py  test_context_manager.py  test_cursor_fetch_after_non_row_execute.py  test_cursor_misc_invariant_pins.py  test_cursor_row_index_after_fetchall.py  test_datetime_conversion.py  test_description_after_ddl_pragma.py  test_executemany_cancel_mid_batch.py  test_executemany_completed_iterations_observability.py  test_executemany_cte_dml.py  test_executemany_failure_resets_rowcount.py  test_executemany_generator.py  test_executemany_returning.py  test_integrity_error.py  test_lastrowid_autoincrement.py  test_lastrowid_cursor_scoped.py  test_lastrowid_returning.py  test_lastrowid_survives_cross_cursor_rollback.py  test_leader_redirect_live.py  test_misc_coverage.py  test_nan_inf_float.py  test_no_transaction_error_wording.py  test_null_vs_empty_text_blob_three_way.py  test_query_detection.py  test_returning.py  test_savepoint_dbapi.py  test_savepoint_failure_responses.py  test_sqlite_version_pin.py
