[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dqlite-dbapi"
version = "0.1.4"
description = "PEP 249 (DB-API 2.0) compliant interface for dqlite"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Antoine Leclair", email = "antoineleclair@gmail.com" }]
keywords = ["dqlite", "sqlite", "distributed", "database", "dbapi", "pep249"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]
dependencies = ["dqlite-client>=0.1.3"]

[tool.uv.sources]
dqlite-client = { path = "../python-dqlite-client", editable = true }
dqlite-wire = { path = "../python-dqlite-wire", editable = true }

[project.urls]
Homepage = "https://github.com/letsdiscodev/python-dqlite-dbapi"
Repository = "https://github.com/letsdiscodev/python-dqlite-dbapi"
Issues = "https://github.com/letsdiscodev/python-dqlite-dbapi/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "pytest-asyncio>=0.23", "mypy>=1.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/dqlitedbapi"]

# Hatchling's default file-selection would already ship ``py.typed`` via
# ``packages``, but declaring it explicitly is the documented PEP 561
# pattern and makes the intent obvious to anyone auditing the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/dqlitedbapi/py.typed" = "dqlitedbapi/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
python_version = "3.13"
# Tests live under ``tests/`` with no ``__init__.py``; mypy needs
# ``explicit_package_bases`` (or namespace packages) to avoid the
# duplicate-conftest module-name collision when scanning sibling
# integration/ subdirectories. ``mypy_path`` mirrors the
# ``pythonpath = ["src"]`` declared for pytest so the source files
# resolve under the package name (``dqlitedbapi``), not the layout
# path (``src.dqlitedbapi``).
explicit_package_bases = true
mypy_path = "src"

# Tests use a few patterns that mypy's strict mode flags but are
# correct at runtime. Disabling these codes only inside ``tests.*``
# keeps strict typing on production code while letting the test suite
# use idiomatic patterns without per-line ``# type: ignore`` noise:
#
# * ``method-assign`` — monkey-patching bound methods
#   (``conn.execute = fake_execute``) is the standard way to inject a
#   fake without subclassing.
# * ``no-untyped-def`` / ``no-untyped-call`` — pytest fixtures and
#   small helpers are conventionally written without type annotations.
# * ``comparison-overlap`` — ``assert SomeIntEnum.FOO == 0`` is the
#   canonical "this enum matches its int value" pin against a
#   reference table; mypy's literal-type narrowing incorrectly flags
#   it as non-overlapping even though IntEnum's ``__eq__`` works.
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign", "no-untyped-def", "no-untyped-call", "comparison-overlap"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["dqlitedbapi", "dqliteclient", "dqlitewire"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
